apple/Sources/UniFFI/ant_ffiFFI.h

// ⚠️ Attention: If you change this #else block (ending in `#endif // def UNIFFI_SHARED_H`) you *must* ⚠️
// ⚠️ increment the version suffix in all instances of UNIFFI_SHARED_HEADER_V4 in this file.           ⚠️

typedef struct RustBuffer
{
    uint64_t capacity;
    uint64_t len;
    uint8_t *_Nullable data;
} RustBuffer;
// Error definitions
typedef struct RustCallStatus {
    int8_t code;
    RustBuffer errorBuf;
} RustCallStatus;
void*_Nonnull uniffi_ant_ffi_fn_clone_archiveaddress(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
void uniffi_ant_ffi_fn_free_archiveaddress(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
void*_Nonnull uniffi_ant_ffi_fn_constructor_archiveaddress_from_hex(RustBuffer hex, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_ant_ffi_fn_method_archiveaddress_to_hex(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
void*_Nonnull uniffi_ant_ffi_fn_clone_chunk(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
void uniffi_ant_ffi_fn_free_chunk(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
void*_Nonnull uniffi_ant_ffi_fn_constructor_chunk_new(RustBuffer value, RustCallStatus *_Nonnull out_status
);
void*_Nonnull uniffi_ant_ffi_fn_method_chunk_address(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
int8_t uniffi_ant_ffi_fn_method_chunk_is_too_big(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_ant_ffi_fn_method_chunk_network_address(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_ant_ffi_fn_method_chunk_size(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_ant_ffi_fn_method_chunk_value(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
void*_Nonnull uniffi_ant_ffi_fn_clone_chunkaddress(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
void uniffi_ant_ffi_fn_free_chunkaddress(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
void*_Nonnull uniffi_ant_ffi_fn_constructor_chunkaddress_from_content(RustBuffer data, RustCallStatus *_Nonnull out_status
);
void*_Nonnull uniffi_ant_ffi_fn_constructor_chunkaddress_from_hex(RustBuffer hex, RustCallStatus *_Nonnull out_status
);