dart/ant_ffi/lib/src/native/bindings.dart

// Generated by ffigen - do not edit
// ignore_for_file: type=lint

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
import 'dart:ffi' as ffi;

/// FFI bindings for ant_ffi native library
class AntFfiBindings {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
      _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  AntFfiBindings(ffi.DynamicLibrary dynamicLibrary)
      : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  AntFfiBindings.fromLookup(
      ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
          lookup)
      : _lookup = lookup;

  ffi.Pointer<ffi.Void> uniffi_ant_ffi_fn_clone_archiveaddress(
    ffi.Pointer<ffi.Void> ptr,
    ffi.Pointer<RustCallStatus> out_status,
  ) {
    return _uniffi_ant_ffi_fn_clone_archiveaddress(
      ptr,
      out_status,
    );
  }

  late final _uniffi_ant_ffi_fn_clone_archiveaddressPtr = _lookup<
          ffi.NativeFunction<
              ffi.Pointer<ffi.Void> Function(
                  ffi.Pointer<ffi.Void>, ffi.Pointer<RustCallStatus>)>>(
      'uniffi_ant_ffi_fn_clone_archiveaddress');
  late final _uniffi_ant_ffi_fn_clone_archiveaddress =
      _uniffi_ant_ffi_fn_clone_archiveaddressPtr.asFunction<
          ffi.Pointer<ffi.Void> Function(
              ffi.Pointer<ffi.Void>, ffi.Pointer<RustCallStatus>)>();

  void uniffi_ant_ffi_fn_free_archiveaddress(
    ffi.Pointer<ffi.Void> ptr,
    ffi.Pointer<RustCallStatus> out_status,
  ) {
    return _uniffi_ant_ffi_fn_free_archiveaddress(
      ptr,
      out_status,
    );
  }

  late final _uniffi_ant_ffi_fn_free_archiveaddressPtr = _lookup<
          ffi.NativeFunction<
              ffi.Void Function(
                  ffi.Pointer<ffi.Void>, ffi.Pointer<RustCallStatus>)>>(
      'uniffi_ant_ffi_fn_free_archiveaddress');
  late final _uniffi_ant_ffi_fn_free_archiveaddress =
      _uniffi_ant_ffi_fn_free_archiveaddressPtr.asFunction<
          void Function(ffi.Pointer<ffi.Void>, ffi.Pointer<RustCallStatus>)>();

  ffi.Pointer<ffi.Void> uniffi_ant_ffi_fn_constructor_archiveaddress_from_hex(
    RustBuffer hex,
    ffi.Pointer<RustCallStatus> out_status,
  ) {
    return _uniffi_ant_ffi_fn_constructor_archiveaddress_from_hex(
      hex,
      out_status,
    );
  }

  late final _uniffi_ant_ffi_fn_constructor_archiveaddress_from_hexPtr =
      _lookup<
              ffi.NativeFunction<
                  ffi.Pointer<ffi.Void> Function(
                      RustBuffer, ffi.Pointer<RustCallStatus>)>>(
          'uniffi_ant_ffi_fn_constructor_archiveaddress_from_hex');
  late final _uniffi_ant_ffi_fn_constructor_archiveaddress_from_hex =
      _uniffi_ant_ffi_fn_constructor_archiveaddress_from_hexPtr.asFunction<
          ffi.Pointer<ffi.Void> Function(
              RustBuffer, ffi.Pointer<RustCallStatus>)>();

  RustBuffer uniffi_ant_ffi_fn_method_archiveaddress_to_hex(
    ffi.Pointer<ffi.Void> ptr,
    ffi.Pointer<RustCallStatus> out_status,
  ) {
    return _uniffi_ant_ffi_fn_method_archiveaddress_to_hex(
      ptr,
      out_status,
    );
  }

  late final _uniffi_ant_ffi_fn_method_archiveaddress_to_hexPtr = _lookup<
          ffi.NativeFunction<
              RustBuffer Function(
                  ffi.Pointer<ffi.Void>, ffi.Pointer<RustCallStatus>)>>(
      'uniffi_ant_ffi_fn_method_archiveaddress_to_hex');
  late final _uniffi_ant_ffi_fn_method_archiveaddress_to_hex =
      _uniffi_ant_ffi_fn_method_archiveaddress_to_hexPtr.asFunction<
          RustBuffer Function(
              ffi.Pointer<ffi.Void>, ffi.Pointer<RustCallStatus>)>();

  ffi.Pointer<ffi.Void> uniffi_ant_ffi_fn_clone_chunk(
    ffi.Pointer<ffi.Void> ptr,
    ffi.Pointer<RustCallStatus> out_status,
  ) {
    return _uniffi_ant_ffi_fn_clone_chunk(
      ptr,
      out_status,
    );
  }

  late final _uniffi_ant_ffi_fn_clone_chunkPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Void> Function(ffi.Pointer<ffi.Void>,
              ffi.Pointer<RustCallStatus>)>>('uniffi_ant_ffi_fn_clone_chunk');
  late final _uniffi_ant_ffi_fn_clone_chunk =
      _uniffi_ant_ffi_fn_clone_chunkPtr.asFunction<
          ffi.Pointer<ffi.Void> Function(
              ffi.Pointer<ffi.Void>, ffi.Pointer<RustCallStatus>)>();

  void uniffi_ant_ffi_fn_free_chunk(
    ffi.Pointer<ffi.Void> ptr,
    ffi.Pointer<RustCallStatus> out_status,
  ) {
    return _uniffi_ant_ffi_fn_free_chunk(
      ptr,
      out_status,
    );
  }

  late final _uniffi_ant_ffi_fn_free_chunkPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Void>,
              ffi.Pointer<RustCallStatus>)>>('uniffi_ant_ffi_fn_free_chunk');
  late final _uniffi_ant_ffi_fn_free_chunk =
      _uniffi_ant_ffi_fn_free_chunkPtr.asFunction<
          void Function(ffi.Pointer<ffi.Void>, ffi.Pointer<RustCallStatus>)>();

  ffi.Pointer<ffi.Void> uniffi_ant_ffi_fn_constructor_chunk_new(
    RustBuffer value,
    ffi.Pointer<RustCallStatus> out_status,
  ) {
    return _uniffi_ant_ffi_fn_constructor_chunk_new(
      value,
      out_status,
    );
  }

  late final _uniffi_ant_ffi_fn_constructor_chunk_newPtr = _lookup<
          ffi.NativeFunction<
              ffi.Pointer<ffi.Void> Function(
                  RustBuffer, ffi.Pointer<RustCallStatus>)>>(
      'uniffi_ant_ffi_fn_constructor_chunk_new');
  late final _uniffi_ant_ffi_fn_constructor_chunk_new =
      _uniffi_ant_ffi_fn_constructor_chunk_newPtr.asFunction<
          ffi.Pointer<ffi.Void> Function(
              RustBuffer, ffi.Pointer<RustCallStatus>)>();

  ffi.Pointer<ffi.Void> uniffi_ant_ffi_fn_method_chunk_address(
    ffi.Pointer<ffi.Void> ptr,
    ffi.Pointer<RustCallStatus> out_status,
  ) {
    return _uniffi_ant_ffi_fn_method_chunk_address(
      ptr,
      out_status,
    );
  }

  late final _uniffi_ant_ffi_fn_method_chunk_addressPtr = _lookup<
          ffi.NativeFunction<
              ffi.Pointer<ffi.Void> Function(
                  ffi.Pointer<ffi.Void>, ffi.Pointer<RustCallStatus>)>>(
      'uniffi_ant_ffi_fn_method_chunk_address');
  late final _uniffi_ant_ffi_fn_method_chunk_address =
      _uniffi_ant_ffi_fn_method_chunk_addressPtr.asFunction<
          ffi.Pointer<ffi.Void> Function(
              ffi.Pointer<ffi.Void>, ffi.Pointer<RustCallStatus>)>();

  int uniffi_ant_ffi_fn_method_chunk_is_too_big(
    ffi.Pointer<ffi.Void> ptr,
    ffi.Pointer<RustCallStatus> out_status,
  ) {
    return _uniffi_ant_ffi_fn_method_chunk_is_too_big(
      ptr,
      out_status,
    );
  }

  late final _uniffi_ant_ffi_fn_method_chunk_is_too_bigPtr = _lookup<
          ffi.NativeFunction<
              ffi.Int8 Function(
                  ffi.Pointer<ffi.Void>, ffi.Pointer<RustCallStatus>)>>(
      'uniffi_ant_ffi_fn_method_chunk_is_too_big');
  late final _uniffi_ant_ffi_fn_method_chunk_is_too_big =
      _uniffi_ant_ffi_fn_method_chunk_is_too_bigPtr.asFunction<
          int Function(ffi.Pointer<ffi.Void>, ffi.Pointer<RustCallStatus>)>();

  RustBuffer uniffi_ant_ffi_fn_method_chunk_network_address(
    ffi.Pointer<ffi.Void> ptr,
    ffi.Pointer<RustCallStatus> out_status,
  ) {
    return _uniffi_ant_ffi_fn_method_chunk_network_address(
      ptr,
      out_status,
    );
  }

  late final _uniffi_ant_ffi_fn_method_chunk_network_addressPtr = _lookup<
          ffi.NativeFunction<
              RustBuffer Function(
                  ffi.Pointer<ffi.Void>, ffi.Pointer<RustCallStatus>)>>(
      'uniffi_ant_ffi_fn_method_chunk_network_address');
  late final _uniffi_ant_ffi_fn_method_chunk_network_address =
      _uniffi_ant_ffi_fn_method_chunk_network_addressPtr.asFunction<
          RustBuffer Function(
              ffi.Pointer<ffi.Void>, ffi.Pointer<RustCallStatus>)>();

  int uniffi_ant_ffi_fn_method_chunk_size(
    ffi.Pointer<ffi.Void> ptr,
    ffi.Pointer<RustCallStatus> out_status,
  ) {
    return _uniffi_ant_ffi_fn_method_chunk_size(
      ptr,
      out_status,
    );
  }

  late final _uniffi_ant_ffi_fn_method_chunk_sizePtr = _lookup<
          ffi.NativeFunction<
              ffi.Uint64 Function(
                  ffi.Pointer<ffi.Void>, ffi.Pointer<RustCallStatus>)>>(
      'uniffi_ant_ffi_fn_method_chunk_size');
  late final _uniffi_ant_ffi_fn_method_chunk_size =
      _uniffi_ant_ffi_fn_method_chunk_sizePtr.asFunction<
          int Function(ffi.Pointer<ffi.Void>, ffi.Pointer<RustCallStatus>)>();

  RustBuffer uniffi_ant_ffi_fn_method_chunk_value(
    ffi.Pointer<ffi.Void> ptr,
    ffi.Pointer<RustCallStatus> out_status,
  ) {
    return _uniffi_ant_ffi_fn_method_chunk_value(
      ptr,
      out_status,
    );
  }

  late final _uniffi_ant_ffi_fn_method_chunk_valuePtr = _lookup<
          ffi.NativeFunction<
              RustBuffer Function(
                  ffi.Pointer<ffi.Void>, ffi.Pointer<RustCallStatus>)>>(
      'uniffi_ant_ffi_fn_method_chunk_value');
  late final _uniffi_ant_ffi_fn_method_chunk_value =
      _uniffi_ant_ffi_fn_method_chunk_valuePtr.asFunction<
          RustBuffer Function(
              ffi.Pointer<ffi.Void>, ffi.Pointer<RustCallStatus>)>();

  ffi.Pointer<ffi.Void> uniffi_ant_ffi_fn_clone_chunkaddress(
    ffi.Pointer<ffi.Void> ptr,
    ffi.Pointer<RustCallStatus> out_status,
  ) {
    return _uniffi_ant_ffi_fn_clone_chunkaddress(
      ptr,
      out_status,
    );
  }

  late final _uniffi_ant_ffi_fn_clone_chunkaddressPtr = _lookup<
          ffi.NativeFunction<
              ffi.Pointer<ffi.Void> Function(
                  ffi.Pointer<ffi.Void>, ffi.Pointer<RustCallStatus>)>>(
      'uniffi_ant_ffi_fn_clone_chunkaddress');
  late final _uniffi_ant_ffi_fn_clone_chunkaddress =
      _uniffi_ant_ffi_fn_clone_chunkaddressPtr.asFunction<
          ffi.Pointer<ffi.Void> Function(
              ffi.Pointer<ffi.Void>, ffi.Pointer<RustCallStatus>)>();

  void uniffi_ant_ffi_fn_free_chunkaddress(
    ffi.Pointer<ffi.Void> ptr,
    ffi.Pointer<RustCallStatus> out_status,
  ) {
    return _uniffi_ant_ffi_fn_free_chunkaddress(
      ptr,
      out_status,
    );
  }

  late final _uniffi_ant_ffi_fn_free_chunkaddressPtr = _lookup<
          ffi.NativeFunction<
              ffi.Void Function(
                  ffi.Pointer<ffi.Void>, ffi.Pointer<RustCallStatus>)>>(
      'uniffi_ant_ffi_fn_free_chunkaddress');
  late final _uniffi_ant_ffi_fn_free_chunkaddress =
      _uniffi_ant_ffi_fn_free_chunkaddressPtr.asFunction<
          void Function(ffi.Pointer<ffi.Void>, ffi.Pointer<RustCallStatus>)>();

  ffi.Pointer<ffi.Void> uniffi_ant_ffi_fn_constructor_chunkaddress_from_content(
    RustBuffer data,
    ffi.Pointer<RustCallStatus> out_status,
  ) {
    return _uniffi_ant_ffi_fn_constructor_chunkaddress_from_content(
      data,
      out_status,
    );
  }

  late final _uniffi_ant_ffi_fn_constructor_chunkaddress_from_contentPtr =
      _lookup<
              ffi.NativeFunction<
                  ffi.Pointer<ffi.Void> Function(
                      RustBuffer, ffi.Pointer<RustCallStatus>)>>(
          'uniffi_ant_ffi_fn_constructor_chunkaddress_from_content');
  late final _uniffi_ant_ffi_fn_constructor_chunkaddress_from_content =
      _uniffi_ant_ffi_fn_constructor_chunkaddress_from_contentPtr.asFunction<
          ffi.Pointer<ffi.Void> Function(
              RustBuffer, ffi.Pointer<RustCallStatus>)>();

  ffi.Pointer<ffi.Void> uniffi_ant_ffi_fn_constructor_chunkaddress_from_hex(
    RustBuffer hex,
    ffi.Pointer<RustCallStatus> out_status,
  ) {
    return _uniffi_ant_ffi_fn_constructor_chunkaddress_from_hex(
      hex,
      out_status,
    );
  }
